# mm_strip_reconstruction

./: CMakeLists.txt  README.md  requirements.txt
clusterizer/: CMakeLists.txt
clusterizer/include/: Clusterizer1D.h  StripMapping.h
clusterizer/src/: Clusterizer1D.cpp  StripMapping.cpp
common/: CMakeLists.txt
common/include/: ConfigManager.h
common/src/: ConfigManager.cpp
decoder/: CMakeLists.txt
decoder/include/: DreamDecoder.h  dreamdataline.h
decoder/src/: DreamDecoder.cpp
executables/: analyze_waveforms.cpp  clusterize1d.cpp  decode.cpp
feu_hit_combiner/: CMakeLists.txt
feu_hit_combiner/src/: combine_feus_hits.cpp
orchestrator/: process_run.py
qa_waveforms/: qa_waveform_hits.py
waveform_analysis/: CMakeLists.txt
waveform_analysis/include/: WaveformAnalyzer.h
waveform_analysis/src/: WaveformAnalyzer.cpp
